--- a/MembersPanel/activities.html
+++ b/MembersPanel/activities.html
@@ -115,9 +115,9 @@
 
 
                                     <li style="border-color: #198754;border-radius: 5px;">
-                                        <div class="activity-content" onclick="location.href='myupdates.html'" style="cursor: pointer">
+                                        <div class="activity-content" onclick="location.href='attenUpdates.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a style="color: rgb(67, 67, 67)" class="name"><i class="fa fa-certificate" aria-hidden="true"></i> Check your attendance updates details. <span style="color: #198754">Click here</span></a> 
+                                                <a style="color: rgb(67, 67, 67)" class="name"><i class="fa fa-certificate" aria-hidden="true"></i> Check attendance updates. <span style="color: #198754">Click here</span></a> 
                                             </div>
                                         </div>
                                     </li>
