--- a/Board/Meeting/prdept.html
+++ b/Board/Meeting/prdept.html
@@ -646,6 +646,10 @@ var stdNo;
                         },3000);
 
 
+
+                    document.querySelector('#AddModBtn').disabled = "disabled";
+                    document.querySelector('#AddModBtn').style.background = "#e3e3e3";
+                    document.querySelector('#AddModBtn').style.cursor = "not-allowed";
                         SelectAllData();
                
 
@@ -702,6 +706,10 @@ var stdNo;
                     },3000);
 
 
+                    
+                    document.querySelector('#UpdModBtn').disabled = "disabled";
+                    document.querySelector('#UpdModBtn').style.background = "#e3e3e3";
+                    document.querySelector('#UpdModBtn').style.cursor = "not-allowed";
                     SelectAllData();
 
 
