--- a/MembersPanel/Meetings/meeting.html
+++ b/MembersPanel/Meetings/meeting.html
@@ -89,8 +89,7 @@
                </div>
            </div>
 
-           <br>
-               <div class="row">
+            <div class="row" style="margin-top: 5px">
                    
                    <div class="col-md-12">
                     <div class="container">
