--- a/Board/Meeting/prdept.html
+++ b/Board/Meeting/prdept.html
@@ -185,7 +185,7 @@ margin-bottom: 12px; /* Add some space below the input */
                        <div class="modal-content">
                          <div class="modal-header" style="background-color:#0d6efd">
                            <h5 class="modal-title" id="exampleModalLongTitle" style="font-size: 20px; text-align: center;font-weight: bold;color:white">Attendance (PR Department)</h5>
-                           <button type="button" class="close" onclick="location.href='PRdept.html'" aria-label="Close">
+                           <button type="button" class="close" onclick="location.href='prdept.html'" aria-label="Close">
                              <span aria-hidden="true">&times;</span>
                            </button>
                          </div>
