--- a/Board/Meeting/events.html
+++ b/Board/Meeting/events.html
@@ -344,7 +344,7 @@ margin-bottom: 12px; /* Add some space below the input */
                           <div class="alert alert-danger" style="display:none" id="error" role="alert">Error! Record was not added, there was some problem.</div>
                           
                           <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" onclick="location.href='prdept.html'">Close</button>
+                            <button type="button" class="btn btn-secondary" onclick="location.href='events.html'">Close</button>
                             <button id="AddModBtn" type="button" class="btn btn-primary" onclick="AddStd()" style="width:100px"><i class="fa fa-check-square" aria-hidden="true"></i> Post</button>
                              <button id="UpdModBtn" type="button" class="btn" style="background-color: #3D8361; color: #FFFFFF;width:100px" onclick="UpdStd()"><i class="fa fa-check-square" aria-hidden="true"></i> Update</button>
                           </div>
