--- a/MembersPanel/activities.html
+++ b/MembersPanel/activities.html
@@ -58,6 +58,11 @@
                         <a href="payments.html"><i class="fa fa-money"></i> <span>Payments</span></a>
                     </li>
 
+
+                    <li>
+                        <a style="color: red" href="FileUpload/fileupload.html"><i class="fa fa-upload"></i> <span>Upload File</span></a>
+                    </li>
+
                     </ul>
                 </div>
             </div>
@@ -108,24 +113,33 @@
                                     <li style="border-color: #198754;border-radius: 5px;">
                                         <div class="activity-content" onclick="location.href='attendance.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a style="color: rgb(67, 67, 67)" class="name"><i class="fa fa-certificate" aria-hidden="true"></i> Mark your attendance before <span style="font-weight: 700;color: red;"> 15th September 2022</span></a> 
+                                                <a style="color: rgb(67, 67, 67)" class="name">Mark your attendance before <span style="font-weight: 700;color: red;"> 15th September 2022</span></a> 
                                             </div>
                                         </div>
                                     </li>
 
 
                                     <li style="border-color: #198754;border-radius: 5px;">
-                                        <div class="activity-content" onclick="location.href='attenUpdates.html'" style="cursor: pointer">
+                                        <div class="activity-content" onclick="location.href='myupdates.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a style="color: rgb(67, 67, 67)" class="name"><i class="fa fa-certificate" aria-hidden="true"></i> Check attendance updates. <span style="color: #198754">Click here</span></a> 
+                                                <a style="color: rgb(67, 67, 67)" class="name">Check your attendance updates details. <span style="color: #198754">Click here</span></a> 
                                             </div>
                                         </div>
                                     </li>
-					
-					  <li style="border-color: #198754;border-radius: 5px;">
+
+                                    <li style="border-color: #198754;border-radius: 5px;">
                                         <div class="activity-content" onclick="location.href='Meetings/meeting.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a style="color: rgb(67, 67, 67)" class="name"><i class="fa fa-certificate" aria-hidden="true"></i> Check your department meeting attendance. <span style="color: #198754">Click here</span></a> 
+                                                <a style="color: rgb(67, 67, 67)" class="name">Check your department meeting attendance. <span style="color: #198754">Click here</span></a> 
+                                            </div>
+                                        </div>
+                                    </li>
+
+
+                                    <li style="border-color: #198754;border-radius: 5px;">
+                                        <div class="activity-content" onclick="location.href='FileUpload/fileupload.html'" style="cursor: pointer">
+                                            <div class="timeline-content">
+                                                <a style="color: rgb(67, 67, 67)" class="name">Upload your files here >><span style="color: #198754">Click here</span></a> 
                                             </div>
                                         </div>
                                     </li>
