--- a/Board/filesUpload.html
+++ b/Board/filesUpload.html
@@ -318,9 +318,9 @@ margin-bottom: 12px; /* Add some space below the input */
                               <td style="font-size: 12px; font-weight: bold">
                                 ${data.department}
                               </td>
-                              <td><p style="display: ${data.a1}"><a>${data.a1}</a> [ <a style="color: #198754;font-weight:bold" href="${data.file1}" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Download</a> ]<br><span style="color: red; font-weight: 700; font-size: 12.5px;">${data.d1}</span></p></td>
-                              <td><p style="display: ${data.a2}"><a>${data.a2}</a> [ <a style="color: #198754;font-weight:bold" href="${data.file2}" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Download</a> ]<br><span style="color: red; font-weight: 700; font-size: 12.5px;">${data.d2}</span></p></td>
-                              <td><p style="display: ${data.a3}"><a>${data.a3}</a> [ <a style="color: #198754;font-weight:bold" href="${data.file3}" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Download</a> ]<br><span style="color: red; font-weight: 700; font-size: 12.5px;">${data.d3}</span></p></td>
+                              <td><p style="display: ${data.a1}"><a>${data.a1}</a> [ <a style="color: #198754;font-weight:bold;display:${data.down1}" href="${data.file1}" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Download</a> ]<br><span style="color: red; font-weight: 700; font-size: 12.5px;">${data.d1}</span></p></td>
+                              <td><p style="display: ${data.a2}"><a>${data.a2}</a> [ <a style="color: #198754;font-weight:bold;display:${data.down2}" href="${data.file2}" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Download</a> ]<br><span style="color: red; font-weight: 700; font-size: 12.5px;">${data.d2}</span></p></td>
+                              <td><p style="display: ${data.a3}"><a>${data.a3}</a> [ <a style="color: #198754;font-weight:bold;display:${data.down3}" href="${data.file3}" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Download</a> ]<br><span style="color: red; font-weight: 700; font-size: 12.5px;">${data.d3}</span></p></td>
                               </tr>
 
 
