--- a/Board/filesUpload.html
+++ b/Board/filesUpload.html
@@ -221,7 +221,7 @@ margin-bottom: 12px; /* Add some space below the input */
                 </div>
 
                 <div style="margin-top: -15px">
-                  <input type="text" id="myInput" onkeyup="myFunction()"  placeholder="Search by department...">
+                  <input type="text" id="myInput" onkeyup="myFunction()"  placeholder="Search by name...">
                 </div>
               
               <div class="row">
