--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <link href="web/assets/img/favicon.png" rel="icon">
-  <link href="web/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -56,7 +56,7 @@
 <!-- ======= Header ======= -->
 <!-- End Header -->
 <div class="container" style="margin-top: 68px;text-align: center;">
-  <h3 style="color: #0270d6; font-weight: bold;font-size:19px">Wake With Wellness Portal</h3>
+  <h3 style="color: #16151a; font-weight: bold;font-size:19px">Wake With Wellness Portal</h3>
   <p style="font-size:14px; color:grey; margin-top:-5px"><span style="font-weight: 500">Wake With Wellness</span> is a Community Based Organization registered under <span style="font-weight: 500">UNITED NATIONS</span> with a vision of steering people for a hale and hearty life form, <span style="font-weight: 500">‘We Are People Caring For People’</span> </p>
 </div>
  
@@ -67,7 +67,7 @@
       <div class="card" style="background-color: #fff;border-top: 3px solid #198754">
         <h1 style="text-align: center;"><img src="assets/img/member.jpg" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
-          <h5 class="card-title" style="color: #198754">Member Portal</h5>
+          <h5 class="card-title" style="color: #198754;font-size:15px">Member Portal</h5>
           <p class="card-text"></p>
           <a href="./MembersPanel/main.html" style="width: 120px; background-color:  #198754;color: #fff;margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
@@ -75,12 +75,12 @@
     </div>
 
     <div class="col">
-      <div class="card" style="background-color: #fff;border-top: 3px solid #ffc107">
-        <h1 style="text-align: center;"><img src="assets/img/intern.jpg" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
+      <div class="card" style="background-color: #fff;border-top: 3px solid #16151a">
+        <h1 style="text-align: center;"><img src="assets/img/volunteers.png" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
-          <h5 class="card-title" style="color: #ffc107">Interns Portal</h5>
+          <h5 class="card-title" style="color: #16151a; font-size:15px">Volunteer Portal</h5>
           <p class="card-text" ></p>
-          <a href="./interns/main.html" style="width: 120px; background-color: #ffc107;color: #fff;margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
+          <a href="./Volunteers/main.html" style="width: 120px; background-color: #16151a;color: #fff;margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
       </div>
     </div>
@@ -90,7 +90,7 @@
       <div class="card" style="background-color: #fff;border-top: 3px solid #0d6efd">
         <h1 style="text-align: center;"><img src="assets/img/admin.png" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
-          <h5 class="card-title" style="color: #0d6efd">Board Portal</h5>
+          <h5 class="card-title" style="color: #0d6efd;font-size:15px">Board Portal</h5>
           <p class="card-text"></p>
           <a href="./Board/main.html" style="width: 120px; background-color: #0d6efd; color: #fff;margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
@@ -102,7 +102,7 @@
       <div class="card" style="background-color: #fff;border-top: 3px solid #dc3545">
         <h1 style="text-align: center;"><img src="assets/img/superadmin.png" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
-          <h5 class="card-title" style="color: #dc3545">Admin Portal</h5>
+          <h5 class="card-title" style="color: #dc3545;font-size:15px">Admin Portal</h5>
           <p class="card-text"></p>
           <a href="https://adminportal.wakewithwellness.in" style="width: 120px; background-color: #dc3545; color: #fff; margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
@@ -166,9 +166,9 @@
         <div class="content" style="padding: 10px; text-align:left;font-size:12px;text-transform:uppercase">
           <p><i class="fa fa-hand-o-right" aria-hidden="true"></i> <a  style="color: rgb(109, 109, 109)" href="MembersPanel/attendance.html"> Mark your attendance before <span style="color: red; font-weight:500">15th September</span></a></p>
           <p><i class="fa fa-hand-o-right" aria-hidden="true"></i> <a  style="color: rgb(109, 109, 109)" href="MembersPanel/myupdates.html"> Check attendance updates with details</a></p>
-          <p><i class="fa fa-hand-o-right" aria-hidden="true"></i> <a  style="color: rgb(24, 134, 252)" href="https://firebasestorage.googleapis.com/v0/b/files-bf645.appspot.com/o/WWW.apk?alt=media&token=a467a626-80d4-436c-afe5-0de4d2562559"> Download our WWW App now!</a></p>
-  
-	      
+          <p><i class="fa fa-hand-o-right" aria-hidden="true"></i> <a  style="color: rgb(24, 134, 252)" href="https://firebasestorage.googleapis.com/v0/b/files-bf645.appspot.com/o/WWW.apk?alt=media&token=a467a626-80d4-436c-afe5-0de4d2562559"> Download WWW App now!</a></p>
+
+          
         </div>
       </div>
     </div>
