--- a/Volunteers/activities.html
+++ b/Volunteers/activities.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -20,7 +20,7 @@
     <div class="main-wrapper">
         <div class="header" style="background-color: #16151a;">
 			<div class="header-left">
-				<a href="index.html" class="logo">
+				<a href="main.html" class="logo">
 					<img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span>Volunteer Portal</span>
 				</a>
 			</div>
@@ -77,7 +77,7 @@
                                     <li style="border-color: #16151a;border-radius: 5px;">
                                         <div class="activity-content" onclick="location.href='events.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a style="color: rgb(67, 67, 67)" class="name">Events List : <span style="color:  red">Click here</span></a> 
+                                                <a style="color: rgb(67, 67, 67)" class="name">Wake With Wellness offline events List : <span style="color:  red">Click here</span></a> 
                                             </div>
                                         </div>
                                     </li>
