--- a/Volunteers/registrations.html
+++ b/Volunteers/registrations.html
@@ -93,7 +93,7 @@
  
                  <div class="row">
                      <div class="col-sm-12">
-                         <h4 class="page-title">Registration Form <span style="font-size: 15px;color: grey">[Form will closed in : <span style="font-weight: 700;color:#009e1a;" id="demo"></span>]</span></h4><hr>
+                         <h4 class="page-title">Registration Form [<span style="font-weight: 700;color:#009e1a;" id="demo"></span>]</h4><hr>
                      </div>
                  </div>
                  <div class="row">
