--- a/Volunteers/registrations.html
+++ b/Volunteers/registrations.html
@@ -136,10 +136,10 @@
 
                                  
                                 </div>
-                    
+                    <br>
                                   <div class="alert"><i class="fa fa-check-circle" aria-hidden="true"></i> Registered successfully</div>
                                 <div class="text-center">
-                                    <input type="submit" id="submit" value="Submit" style="width: 30vh;height: 6vh" class="btn btn-primary">
+                                    <input type="submit" id="submit" value="Submit" style="width: 30vh;height: 6vh" class="btn btn-dark">
                                 </div>
                             </form>
 
