--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="card-body" style="text-align: center">
           <h5 class="card-title" style="color: #16151a; font-size:15px">Coordinator</h5>
           <p class="card-text" ></p>
-          <a href="./Volunteers/main.html" style="width: 120px; background-color: #16151a;color: #fff;margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
+          <a href="./Coordinators/main.html" style="width: 120px; background-color: #16151a;color: #fff;margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
       </div>
     </div>
