--- a/MembersPanel/Meetings/meeting.html
+++ b/MembersPanel/Meetings/meeting.html
@@ -100,6 +100,7 @@
                          <option value="pr.html">PR Department</option>
                          <option value="events.html">Events Department</option>
                          <option value="marketing.html">Marketing Department</option>
+			      <option value="design.html">Design & Media Department</option>
                        
                          
                      </select></div>
