--- a/MembersPanel/employees.html
+++ b/MembersPanel/employees.html
@@ -204,7 +204,7 @@
                             </td>
                          
                             <td>${data.regno}</td>
-                            <td style="display:${data.stars};font-size:20px;color:#198754"><div style="color:#d6d6d6">★★★★★</div><div style="color:#198754; margin-top:-30px">${data.stars}</div></td>
+                            <td style="font-size:20px;color:#198754"><div style="display:${data.stars};color:#d6d6d6">★★★★★</div><div style="display:${data.stars};color:#198754; margin-top:-30px">${data.stars}</div></td>
                             <td><a href="" style="color: #198754" class="__cf_email__" data-cfemail="fb9a979992959a88929694959288bb9e839a968b979ed5989496">[email&#160;protected]</a></td>
                             <td><a href="" style="color: #198754" class="__cf_email__" data-cfemail="fb9a979992959a88929694959288bb9e839a968b979ed5989496">[contact&#160;protected]</a></td>
                             <td> <span class="custom-badge status-${data.color}">${data.role}</span></td>
