--- a/MembersPanel/activities.html
+++ b/MembersPanel/activities.html
@@ -69,26 +69,7 @@
         </div>
 
 
-        <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">ID Card Application</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-            For identity card, a fee of <span style="color: tomato;font-weight: 700;">40 INR</span>  is required. Additional delivery charges will be included (if required).
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary" onclick="location.href='idcard.html'">Continue</button>
-        </div>
-      </div>
-    </div>
-  </div>
+ 
 
 
         <div class="page-wrapper">
@@ -107,13 +88,19 @@
 
                    
 
-                                   
+                                    <li style="border-color: #198754;border-radius: 5px;">
+                                        <div class="activity-content" onclick="location.href='idcard.html'" style="cursor: pointer">
+                                            <div class="timeline-content">
+                                                <a style="color: rgb(67, 67, 67)" class="name">Apply for <span style="font-weight: 700;color: red;">Identity Card</span></a> 
+                                            </div>
+                                        </div>
+                                    </li>
 
 
                                     <li style="border-color: #198754;border-radius: 5px;">
                                         <div class="activity-content" onclick="location.href='attendance.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a style="color: rgb(67, 67, 67)" class="name">Mark your attendance before <span style="font-weight: 700;color: red;"> 15th September 2022</span></a> 
+                                                <a style="color: rgb(67, 67, 67)" class="name">Mark your attendance before <span style="font-weight: 700;color: red;"> 30th September 2022</span></a> 
                                             </div>
                                         </div>
                                     </li>
