--- a/MembersPanel/idcard.html
+++ b/MembersPanel/idcard.html
@@ -254,7 +254,7 @@
       </select>
       <select style="border: 1px solid #c7c7c7; border-radius: 5px; padding-left: 5px" type="text" class="form-control" name="link" >
     
-      <option value="https://rzp.io/i/LQoLwm6S5">Guwahati (Assam)</option>
+      <option value="https://rzp.io/l/RESzvRhh1">Guwahati (Assam)</option>
       <option value="https://rzp.io/i/fWO0Xt8E">Out of Guwahati (Assam)</option>
       <option value="https://rzp.io/i/RJlz2TwnY">Out of Assam</option>
       <option value="https://rzp.io/i/pQ7IO2kS">E-card (Only for members outside Assam)</option>
@@ -337,7 +337,7 @@
       </select>
       <select style="border: 1px solid #c7c7c7; border-radius: 5px; padding-left: 5px" type="text" class="form-control" name="link" >
     
-      <option value="https://rzp.io/i/LQoLwm6S5">Guwahati (Assam)</option>
+      <option value="https://rzp.io/l/RESzvRhh1">Guwahati (Assam)</option>
       <option value="https://rzp.io/i/fWO0Xt8E">Out of Guwahati (Assam)</option>
       <option value="https://rzp.io/i/RJlz2TwnY">Out of Assam</option>
       <option value="https://rzp.io/i/pQ7IO2kS">E-card (Only for members outside Assam)</option>
