--- a/MembersPanel/Meetings/events.html
+++ b/MembersPanel/Meetings/events.html
@@ -88,7 +88,7 @@
                                     <th scope="col" style="min-width: 17vh">Date</th> 
                                     <th scope="col" style="min-width: 30vh">Agenda</th> 
                                     <th scope="col">Barasha Rani Thakuria</th> 
-                                    <th scope="col">SRII SWATHISH R</th> 
+                                    <th scope="col">Trishna Das</th> 
                                     <th scope="col">Sheekha Tripathy</th> 
                                     <th scope="col">ANKITA BARMAN ROY</th> 
                                     <th scope="col">Purbasha Baruah Borah</th> 
