--- a/MembersPanel/tshirt.html
+++ b/MembersPanel/tshirt.html
@@ -67,6 +67,7 @@
                 </div>
 
                 <div style="text-align: justify;margin-left: 5px;font-size: 12.5px">
+			 <h6>Material: <strong>100% biowashed cotton 180gsm</strong></h6>
                   <div class="row">
                     <div class="col-lg"> <p><img style="max-width:100%;height:auto" src="./assets/img/round.JPG"/> </p>
                       <h4 style="background-color:#ececec; max-width: 50vh;padding:8px;color:#6e6e6e;margin-top:-15px">Price: <strong style="color: red">₹349</strong></h4>
