--- a/MembersPanel/activities.html
+++ b/MembersPanel/activities.html
@@ -88,10 +88,10 @@
 
                    
 
-                                    <li style="border-color: #198754;border-radius: 5px;">
-                                        <div class="activity-content" onclick="location.href='idcard.html'" style="cursor: pointer">
+                               <li style="border-color: #198754;border-radius: 5px;">
+                                        <div class="activity-content" onclick="location.href='tshirt.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a style="color: rgb(67, 67, 67)" class="name">Apply for <span style="font-weight: 700;color: red;">Identity Card</span></a> 
+                                                <a style="color: rgb(67, 67, 67)" class="name">Apply for <span style="font-weight: 700;color: red;">Wake With Wellness T-shirt</span></a> 
                                             </div>
                                         </div>
                                     </li>
