--- a/Coordinators/activities.html
+++ b/Coordinators/activities.html
@@ -46,6 +46,10 @@
                                <li>
                                <a href="coordinators.html"><i class="fa fa-users"></i> <span>Coordinators List</span></a>
                                </li>
+			    
+			      <li>
+                                <a href="payments.html"><i class="fa fa-users"></i> <span>Payment History</span></a>
+                                </li>
                    
                     </ul>
                 </div>
