--- a/MembersPanel/activities.html
+++ b/MembersPanel/activities.html
@@ -60,6 +60,11 @@
 
 
                     <li>
+                        <a href="events.html"><i class="fa fa-calendar-o"></i> <span>Offline Events</span></a>
+                    </li>
+
+
+                    <li>
                         <a style="color: red" href="FileUpload/fileupload.html"><i class="fa fa-upload"></i> <span>Upload File</span></a>
                     </li>
 
@@ -88,10 +93,10 @@
 
                    
 
-                               <li style="border-color: #198754;border-radius: 5px;">
-                                        <div class="activity-content" onclick="location.href='tshirt.html'" style="cursor: pointer">
+                                    <li style="background-color:#198754;border-radius: 5px;">
+                                        <div class="activity-content" onclick="location.href='events.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a style="color: rgb(67, 67, 67)" class="name">Apply for Wake With Wellness <span style="font-weight: 700;color: red;"> T-shirt</span></a> 
+                                                <a style="color: rgb(255, 255, 255)" class="name">Offline Events (Guwahti)</a> 
                                             </div>
                                         </div>
                                     </li>
@@ -100,7 +105,7 @@
                                     <li style="border-color: #198754;border-radius: 5px;">
                                         <div class="activity-content" onclick="location.href='attendance.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a style="color: rgb(67, 67, 67)" class="name">Mark your attendance before <span style="font-weight: 700;color: red;"> 15th October 2022</span></a> 
+                                                <a style="color: rgb(67, 67, 67)" class="name">Mark your attendance before <span style="font-weight: 700;color: red;"> 30th September 2022</span></a> 
                                             </div>
                                         </div>
                                     </li>
