--- a/Board/childrensday.html
+++ b/Board/childrensday.html
@@ -326,7 +326,7 @@ margin-bottom: 12px; /* Add some space below the input */
                               </td>
 
                               <td style="font-size: 12px; font-weight: bold">
-                              ₹  ${data.amount}
+                              ₹  ${data.amount}.00
                               </td>
 
                               <td style="font-size: 12px">
