--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
     </div>
 
     <div class="col">
-      <div class="card" style="background-color: #fff;border-top: 3px solid #16151a">
+      <div class="card" style="background-color: #fff;border-top: 3px solid #03b1fc">
         <h1 style="text-align: center;"><img src="assets/img/volunteers.png" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
-          <h5 class="card-title" style="color: #16151a; font-size:15px">Coordinator</h5>
+          <h5 class="card-title" style="color: #03b1fc; font-size:15px">Coordinator</h5>
           <p class="card-text" ></p>
-          <a href="./Coordinators/main.html" style="width: 120px; background-color: #16151a;color: #fff;margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
+          <a href="./Coordinators/main.html" style="width: 120px; background-color: #03b1fc;color: #fff;margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
       </div>
     </div>
@@ -164,7 +164,7 @@
           <h5 style="font-weight: 600">Spotlight</h5>
         </div>
         <div class="content" style="padding: 10px; text-align:left;font-size:12px;text-transform:uppercase">
-          <p><i class="fa fa-hand-o-right" aria-hidden="true"></i> <a  style="color: rgb(109, 109, 109)" href="MembersPanel/attendance.html"> Mark your attendance before <span style="color: red; font-weight:500">31th October</span></a></p>
+          <p><i class="fa fa-hand-o-right" aria-hidden="true"></i> <a  style="color: rgb(109, 109, 109)" href="MembersPanel/attendance.html"> Mark your attendance before <span style="color: red; font-weight:500">30th September</span></a></p>
           <p><i class="fa fa-hand-o-right" aria-hidden="true"></i> <a  style="color: rgb(109, 109, 109)" href="MembersPanel/myupdates.html"> Check attendance updates with details</a></p>
           <p><i class="fa fa-hand-o-right" aria-hidden="true"></i> <a  style="color: rgb(24, 134, 252)" href="https://firebasestorage.googleapis.com/v0/b/files-bf645.appspot.com/o/WWW.apk?alt=media&token=a467a626-80d4-436c-afe5-0de4d2562559"> Download WWW App now!</a></p>
 
