--- a/Coordinators/main.html
+++ b/Coordinators/main.html
@@ -96,7 +96,7 @@
   </div>
 
 
-  <div class="header" style="background-color: #16151a;">
+  <div class="header" style="background-color: #03b1fc;">
     <div class="header-left">
       <a class="logo" style="margin-left: -15px;">
         <img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span style="font-size: 17px">Coordinator Portal</span>
