--- a/Coordinators/activities.html
+++ b/Coordinators/activities.html
@@ -24,7 +24,7 @@
 
 <body style="background-color: rgb(238, 238, 238)">
     <div class="main-wrapper">
-        <div class="header" style="background-color: #16151a;">
+        <div class="header" style="background-color: #03b1fc;">
 			<div class="header-left">
 				<a href="main.html" class="logo">
 					<img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span style="font-size: 16px">Coordinator Portal</span>
@@ -66,7 +66,7 @@
 
 
         <div class="page-wrapper">
-            <div class="content" style="background-color: #fff;margin: 15px;border-top: 3px solid #16151a;padding: 20px;border-radius: 5px;">
+            <div class="content" style="background-color: #fff;margin: 15px;border-top: 3px solid #03b1fc;padding: 20px;border-radius: 5px;">
 
                 <div class="row">
                     <div class="col-sm-12">
@@ -84,7 +84,7 @@
                                    
 
 
-                                    <li style="border-color: #16151a;border-radius: 5px;">
+                                    <li style="border-color: #03b1fc;border-radius: 5px;">
                                         <div class="activity-content" onclick="location.href='events.html'" style="cursor: pointer">
                                             <div class="timeline-content">
                                                 <a style="color: rgb(67, 67, 67)" class="name">Wake With Wellness offline events List : <span style="color:  red">Click here</span></a> 
