--- a/Coordinators/coordinators.html
+++ b/Coordinators/coordinators.html
@@ -35,7 +35,7 @@
 
 <body style="background-color: rgb(238, 238, 238)">
     <div class="main-wrapper">
-        <div class="header" style="background-color: #16151a;">
+        <div class="header" style="background-color: #03b1fc;">
 			<div class="header-left">
 				<a href="main.html" class="logo">
 					<img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span style="font-size: 16px">Coordinator Portal</span>
@@ -62,6 +62,10 @@
                       <li>
                         <a href="events.html"><i class="fa fa-users"></i> <span>Events</span></a>
                         </li>
+
+                        <li>
+                            <a href="payments.html"><i class="fa fa-money"></i> <span>Payment History</span></a>
+                            </li>
             
                       
 
@@ -70,7 +74,7 @@
             </div>
         </div>
         <div class="page-wrapper">
-            <div class="content" style="background-color: #fff;margin: 15px;border-top: 3px solid #16151a;padding: 5px;border-radius: 5px;">
+            <div class="content" style="background-color: #fff;margin: 15px;border-top: 3px solid #03b1fc;padding: 5px;border-radius: 5px;">
                     <div class="row" style="padding: 15px">
                             <div class="col-sm-12">
                                 <h4 class="page-title">Coordinators List</h4><hr>
