--- a/Coordinators/agreement.html
+++ b/Coordinators/agreement.html
@@ -145,6 +145,12 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        <label>Date of Birth</label>
+                                        <input type="date" id="dob" name="dob" placeholder="Date of Birth.." required class="form-control">
+                                    </div>
+
+
+                                    <div class="form-group">
                                         <label>Alternate Contact Number (State your relation with the person)</label>
                                         <input type="text" id="Alternate" name="alternateNo" title="Ten digits code"  placeholder="Your alternate number (relation).." required class="form-control">
                                     </div>
