--- a/Coordinators/agreement.html
+++ b/Coordinators/agreement.html
@@ -172,7 +172,7 @@
        
                                   <div class="form-group">
                                   <label >
-                                    <input type="checkbox" id="Checkbox1" name="declaration" required> I will participate and be responsive towards the organisations. If I remain inactive and irresponsive towards the codes and ethics of the organisation during my observation period (2-3months after registration), I will accept the termination and cancellation of my tenure registration.<span style="color: red;">*</span></label>
+                                    <input type="checkbox" id="Checkbox1" name="declaration" required> I will participate and be responsive towards the organisations. If I remain inactive and irresponsive towards the codes and ethics of the organisation during my observation period (2-3months after registration), I will accept the termination and cancellation of my tenure.<span style="color: red;">*</span></label>
                                   </div>
 
                                
