--- a/MembersPanel/activities.html
+++ b/MembersPanel/activities.html
@@ -100,6 +100,14 @@
                                             </div>
                                         </div>
                                     </li>
+					
+					  <li style="border-color:#198754;border-radius: 5px;">
+                                        <div class="activity-content" onclick="location.href='tshirt.html'" style="cursor: pointer">
+                                            <div class="timeline-content">
+                                                <a style="color: rgb(67, 67, 67)" class="name">Order your WWW Tshirt now! <span style="color: red">[Last vate: 21st November 2022]</span></a> 
+                                            </div>
+                                        </div>
+                                    </li>
 
 
                                     <li style="border-color: #198754;border-radius: 5px;">
