--- a/Coordinators/activities.html
+++ b/Coordinators/activities.html
@@ -81,6 +81,13 @@
 
                    
 
+					     <li style="border-color:#03b1fc;border-radius: 5px;">
+                                        <div class="activity-content" onclick="location.href='../MembersPanel/tshirt.html'" style="cursor: pointer">
+                                            <div class="timeline-content">
+                                                <a style="color: rgb(67, 67, 67)" class="name">Order your WWW Tshirt now! <span style="color: red">[Last vate: 21st November 2022]</span></a> 
+                                            </div>
+                                        </div>
+                                    </li>
                                    
 
 
