--- a/MembersPanel/activities.html
+++ b/MembersPanel/activities.html
@@ -104,7 +104,7 @@
 					  <li style="border-color:#198754;border-radius: 5px;">
                                         <div class="activity-content" onclick="location.href='tshirt.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a style="color: rgb(67, 67, 67)" class="name">Order your WWW Tshirt now! <span style="color: red">[Last vate: 21st November 2022]</span></a> 
+                                                <a style="color: rgb(67, 67, 67)" class="name">Order your WWW Tshirt now! <span style="color: red">[Last vate: 25th November 2022]</span></a> 
                                             </div>
                                         </div>
                                     </li>
