--- a/MembersPanel/tshirt.html
+++ b/MembersPanel/tshirt.html
@@ -173,12 +173,12 @@
                                 <div class="form-group">
                                     <label>T-shirt type</label>
                                     <select id="type" name="type" class="form-control" required>
-                                      <option value="" disabled selected>Select t-shirt type</option>
+                                      <option value="" disabled selected>Select T-shirt type</option>
                                       <option value="Round Neck">Round Neck (₹359)</option>
-                                      <option value="Polo tshirt">Polo tshirt (₹499)</option>
+                                      <option value="Polo tshirt">Polo (₹499)</option>
                                       <option value="Polo+Round">Round Neck + Polo (₹839)</option>
                                       <option value="Round Neck(H)">Round Neck + Home Delivery (₹449)</option>
-                                      <option value="Polo tshirt(H)">Polo tshirt + Home Delivery (₹579)</option>
+                                      <option value="Polo tshirt(H)">Polo + Home Delivery (₹579)</option>
                                       <option value="Polo + Round(H)">Round + Polo + Home Delivery (₹1099)</option>
                              
                                     
