--- a/feedbacks.html
+++ b/feedbacks.html
@@ -43,7 +43,7 @@
       </div>
 
       <div class="container" style="margin-top: 15vh;text-align: center">
-        <h3 style="color: #16151a; font-weight: bold;font-size:19px">Swachh Prayaakh: Cleanliness Drive 2.0</h3>
+        <h3 style="color: #16151a; font-weight: bold;font-size:19px">Hepah: From Welfare to Well-being</h3>
         <p style="font-size:14px; color:grey; margin-top:-5px">We would love to hear your thoughts, suggestions, concerns or problems with anything so we can improve!</p>
       </div>
        
