--- a/MembersPanel/EntryPass/passess.html
+++ b/MembersPanel/EntryPass/passess.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     
-    <title>EventsList</title>
+    <title>EntryPassRegistration</title>
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet"  href="../assets/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="../assets/css/font-awesome.min.css">
