--- a/Board/EntryPasses.html
+++ b/Board/EntryPasses.html
@@ -215,7 +215,7 @@ margin-bottom: 12px; /* Add some space below the input */
           <div class="content" style="background-color: #fff;margin: 15px;border-top: 3px solid #0d6efd;padding: 3px;border-radius: 5px;">
                 <div class="row"  style="padding: 15px">
                   <div class="col-sm-12">
-                      <h4 class="page-title">Members Details</h4><hr>
+                      <h4 class="page-title">Entry Pass Registrations</h4><hr>
                   </div>
                 </div>
 
