--- a/Coordinators/activities.html
+++ b/Coordinators/activities.html
@@ -79,16 +79,23 @@
                             <div class="activity-box">
                                 <ul class="activity-list">
 
-                   
-
-					     <li style="border-color:#03b1fc;border-radius: 5px;">
-                                        <div class="activity-content" onclick="location.href='../MembersPanel/tshirt.html'" style="cursor: pointer">
+                                    <li style="border-radius: 5px;border-color:#03b1fc">
+                                        <div class="activity-content" onclick="location.href='./EntryPass/passess.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a style="color: rgb(67, 67, 67)" class="name">Order your WWW Tshirt now! <span style="color: red">[Last vate: 25th November 2022]</span></a> 
+                                                <a style="color: rgb(25, 25, 25)" class="name">Entry Pass Registration</a> 
                                             </div>
                                         </div>
                                     </li>
-                                   
+
+
+
+                                    <li style="border-color:#03b1fc;border-radius: 5px;">
+                                        <div class="activity-content" onclick="location.href='../MembersPanel/tshirt.html'" style="cursor: pointer">
+                                            <div class="timeline-content">
+                                                <a style="color: rgb(67, 67, 67)" class="name">Order your WWW Tshirt now! <span style="color: red">[Last vate: 21st November 2022]</span></a> 
+                                            </div>
+                                        </div>
+                                    </li>
 
 
                                     <li style="border-color: #03b1fc;border-radius: 5px;">
