--- a/MembersPanel/attenUpdates.html
+++ b/MembersPanel/attenUpdates.html
@@ -310,6 +310,10 @@ margin-bottom: 12px; /* Add some space below the input */
                                       <th scope="col">Reg No.</th>
                                     <th scope="col">Name</th>
                                     <th scope="col" style="text-align: center">Percentage</th>
+                                    <th scope="col">Feb2'23</th> 
+                                    <th scope="col">Feb1'23</th> 
+                                    <th scope="col">Jan2'23</th> 
+                                    <th scope="col">Jan1'23</th> 
                                     <th scope="col">Dec2'22</th> 
                                     <th scope="col">Dec1'22</th> 
                                     <th scope="col">Nov2'22</th> 
@@ -349,6 +353,9 @@ margin-bottom: 12px; /* Add some space below the input */
                                       <th scope="col">Reg No.</th>
                                     <th scope="col">Name</th>
                                     <th scope="col" style="text-align: center">Percentage</th>
+                              
+                                    <th scope="col">Jan2'23</th> 
+                                    <th scope="col">Jan1'23</th> 
                                     <th scope="col">Dec2'22</th> 
                                     <th scope="col">Dec1'22</th> 
                                     <th scope="col">Nov2'22</th> 
@@ -394,6 +401,10 @@ margin-bottom: 12px; /* Add some space below the input */
                                       <th scope="col">Reg No.</th>
                                     <th scope="col">Name</th>
                                     <th scope="col" style="text-align: center">Percentage</th>
+                                    <th scope="col">Feb2'23</th> 
+                                    <th scope="col">Feb1'23</th> 
+                                    <th scope="col">Jan2'23</th> 
+                                    <th scope="col">Jan1'23</th> 
                                     <th scope="col">Dec2'22</th> 
                                     <th scope="col">Dec1'22</th> 
                                     <th scope="col">Nov2'22</th> 
