--- a/MembersPanel/activities.html
+++ b/MembersPanel/activities.html
@@ -118,7 +118,7 @@
                                     <li style="border-color: #198754;border-radius: 5px;">
                                         <div class="activity-content" onclick="location.href='attendance.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a style="color: rgb(67, 67, 67)" class="name">Mark your attendance before <span style="font-weight: 700;color: red;"> 15th January 2023</span></a> 
+                                                <a style="color: rgb(67, 67, 67)" class="name">Mark your attendance before <span style="font-weight: 700;color: red;"> 31st January 2023</span></a> 
                                             </div>
                                         </div>
                                     </li>
