--- a/Board/OfflineEvents/coordinatorsatten.html
+++ b/Board/OfflineEvents/coordinatorsatten.html
@@ -262,7 +262,8 @@ margin-bottom: 12px; /* Add some space below the input */
                       </th>
 
                        <td style="font-size:10px">${data.name}</td>
-                      
+                       <td style="font-size:10px; font-weight:600;color: red"><span style="color: ${data.color3}">${data.event3}</span> <i style="color: green; font-size:15px; display:${data.e5};cursor: pointer " class="fa fa-download" onclick="location.href='${data.e5}'" aria-hidden="true"></i></td>
+                       <td style="font-size:10px; font-weight:600;color: red"><span style="color: ${data.color3}">${data.event3}</span> <i style="color: green; font-size:15px; display:${data.e4};cursor: pointer " class="fa fa-download" onclick="location.href='${data.e4}'" aria-hidden="true"></i></td>
                           <td style="font-size:10px; font-weight:600;color: red"><span style="color: ${data.color3}">${data.event3}</span> <i style="color: green; font-size:15px; display:${data.e3};cursor: pointer " class="fa fa-download" onclick="location.href='${data.e3}'" aria-hidden="true"></i></td>
                           <td style="font-size:10px;font-weight:600;color: red"><span style="color: ${data.color2}">${data.event2}</span> <i style="color: green; font-size:15px; display:${data.e2};cursor: pointer " class="fa fa-download" onclick="location.href='${data.e2}'" aria-hidden="true"></i></td>
                           <td style="font-size:10px;font-weight:600;color: red"><span style="color: ${data.color1}">${data.event1}</span> <i style="color: green; font-size:15px; display:${data.e1};cursor: pointer " class="fa fa-download" onclick="location.href='${data.e1}'" aria-hidden="true"></i></td>
